fixed huge whitespace bug with writer

--- a/DATABASES/base1.css
+++ b/DATABASES/base1.css
@@ -6,9 +6,6 @@
   color: #78616d;
   color: #706c65;
   color: #2c2037;
-}
-
-.integer {
   color: #330000;
 }
 
